# fortran-NDK

./: CMakeLists.txt  android.toolchain.cmake  build_android.sh  hello.f
